updated with a dropdown list

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
     <link rel="icon" href="icon.png" type="image/icon type">
-    <title>My Card</title>
+    <title>My Card | Shivam Sharma</title>
 </head>
 
 <body>
@@ -19,12 +22,12 @@
             <div id="sololearn"><img src="icon.png" alt=""></div>
         </div>
         <div id="heading">
-            <h1>&star; Shivam &star;</h1>
-            <p>level 11</p>
+            <h1>&star; Shivam Sharma &star;</h1>
+            <p>level 12</p>
         </div>
         <div>
             <div class="followers">
-                <h1>9</h1>
+                <h1>12</h1>
                 <p>Followers</p>
             </div>
             <div class="followers">
@@ -33,16 +36,29 @@
             </div>
         </div>
         <div class="skills">
-            <p>skills</p>
+            <p>Skills</p>
             <div>
                 <span>C++</span>
                 <span>HTML</span>
                 <span>CSS</span>
+                <span>JavaScript</span>
             </div>
         </div>
         <div id="follow">
             <a href="https://www.sololearn.com/Profile/18591279/?ref=app" target="_blank">Follow</a>
         </div>
+        <hr>
+        <div class="dropdown">
+            <p>My Projects &#9662;</p>
+            <div class="dropdown-content">
+                <a href="https://shivamsharma3589.github.io/pizza-online/" target="_blank">Pizza-Online</a>
+                <a href="https://shivamsharma3589.github.io/portfolioo/" target="_blank">Portfolio</a>
+                <a href="https://shivamsharma3589.github.io/social/" target="_blank">Social-Media</a>
+                <a href="https://shivamsharma3589.github.io/insta-page/" target="_blank">Insta-Log-In-Page</a>
+                <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
+            </div>
+        </div>
+
     </article>
 </body>
 
