added new link of my gym page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <a href="https://shivamsharma3589.github.io/portfolioo/" target="_blank">Portfolio</a>
                 <a href="https://shivamsharma3589.github.io/social/" target="_blank">Social-Media</a>
                 <a href="https://shivamsharma3589.github.io/insta-page/" target="_blank">Insta-Log-In-Page</a>
+                <a href="https://shivamsharma3589.github.io/Gym/" target="_blank">GYM - Page</a>
                 <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
             </div>
         </div>
