--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <a href="https://shivamsharma3589.github.io/insta-page/" target="_blank">Insta-Log-In-Page</a>
                 <a href="https://shivamsharma3589.github.io/Gym/" target="_blank">GYM - Page</a>
                 <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
+                <a href="https://shivamsharma3589.github.io/My-CV-Shivam-Sharma/" target="_blank">My CV</a>
             </div>
         </div>
 
