--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                 <a href="https://shivamsharma3589.github.io/Gym/" target="_blank">GYM - Page</a>
                 <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
                 <a href="https://shivamsharma3589.github.io/My-CV-Shivam-Sharma/" target="_blank">My CV</a>
+                <a href="https://shivamsharma3589.github.io/land-records/" target="_blank">Land Records</a>
             </div>
         </div>
 
