My Music Page Link Added

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
                 <a href="https://shivamsharma3589.github.io/My-CV-Shivam-Sharma/" target="_blank">My CV</a>
                 <a href="https://shivamsharma3589.github.io/land-records/" target="_blank">Land Records</a>
+                <a href="https://shivamsharma3589.github.io/My-Music-Page/" target="_blank">My Music Page</a>
             </div>
         </div>
 
