--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
         <div class="dropdown">
             <p>My Projects &#9662;</p>
             <div class="dropdown-content">
+                <a href="https://shivamsharma3589.github.io/Music-Page/" target="_blank">My Music Player</a>
                 <a href="https://shivamsharma3589.github.io/My-Music-Page/" target="_blank">My Music Page</a>
                 <a href="https://shivamsharma3589.github.io/RockPaperScissor/" target="_blank">RockPaperScissor</a>
                 <a href="https://shivamsharma3589.github.io/My-CV-Shivam-Sharma/" target="_blank">My CV</a>
